--- a/.github/workflows/infrastructure-deployment-pipeline.yml
+++ b/.github/workflows/infrastructure-deployment-pipeline.yml
@@ -49,7 +49,6 @@ jobs:
         MONITORING_PRIVATE_KEY: fiscalismia-monitoring-instance-key-hcloud
       run: |
         set -eou pipefail
-        mkdir -p ~/.ssh/
 
         echo "Starting ssh-agent and exporting environment variables"
         eval "$(ssh-agent -s)"
@@ -123,7 +122,7 @@ jobs:
       run: |
         echo "Deploying Prometheus on Monitoring Instance"
 
-    - name: Deploy FRONTEND Production Instance via OpenSSH
+    - name: Deploy GRAFAMA on Monitoring Instance via OpenSSH
       if: inputs.deploy_grafana == true
       run: |
         echo "Deploying Grafana on Monitoring Instance"
