HCLOUD Terraform Pipeline to workflow_dispatch

--- a/.github/workflows/terraform-apply hcloud.yml
+++ b/.github/workflows/terraform-apply hcloud.yml
@@ -1,12 +1,13 @@
 name: HCLOUD Terraform Pipeline
 
 on:
-  push:
-    branches:
-      - main
-  pull_request:
-    branches:
-      - main
+  workflow_dispatch:
+    inputs:
+      run_hclouzd_deployment:
+        description: 'Terraform plan aws & manually approve plan'
+        required: true
+        default: true
+        type: boolean
 
 jobs:
   #          __        __        __      __   ___  __        __             ___      ___
