--- a/.github/workflows/infrastructure-deployment-pipeline.yml
+++ b/.github/workflows/infrastructure-deployment-pipeline.yml
@@ -82,6 +82,7 @@ jobs:
 
     - name: Create SSH Config for Bastion-Host ProxyJump
       run: |
+        mkdir -p ~/.ssh/config
         cat << EOF > ~/.ssh/config
         Host bastion-host
             HostName $BASTION_HOST_PUBLIC_IP
