Optimizes AWS Lambda log levels

--- a/bruno/fiscalismia-development/API_GW/raw_data_etl.yml
+++ b/bruno/fiscalismia-development/API_GW/raw_data_etl.yml
@@ -6,10 +6,12 @@ info:
 http:
   method: POST
   url: "{{API_GW_ENDPOINT}}/api/fiscalismia/post/raw_data_etl/invoke_lambda/return_tsv_file_urls"
+  headers:
+    - name: Authorization
+      value: "{{API_GW_SECRET_KEY}}"
   body:
     type: json
     data: '{key:"value"}'
-  auth: inherit
 
 settings:
   encodeUrl: true
