Adds FASTAPI bruno routes

--- a/bruno/fiscalismia-development/environments/development.yml
+++ b/bruno/fiscalismia-development/environments/development.yml
@@ -4,3 +4,7 @@ variables:
     name: API_GW_ENDPOINT
   - secret: true
     name: API_GW_SECRET_KEY
+  - name: FASTAPI_ENDPOINT
+    value: http://localhost:8000
+  - secret: true
+    name: JWT_SESSION_TOKEN
