Extends bruno /w websocket & script

--- a/bruno/fiscalismia-development/FASTAPI/health_check.yml
+++ b/bruno/fiscalismia-development/FASTAPI/health_check.yml
@@ -5,7 +5,7 @@ info:
 
 http:
   method: GET
-  url: "{{FASTAPI_ENDPOINT}}/api/fiscalismia/hc"
+  url: http://{{FASTAPI_ENDPOINT}}/hc
   auth: inherit
 
 settings:
