--- a/bruno/fiscalismia-development/environments/development.yml
+++ b/bruno/fiscalismia-development/environments/development.yml
@@ -5,6 +5,6 @@ variables:
   - secret: true
     name: API_GW_SECRET_KEY
   - name: FASTAPI_ENDPOINT
-    value: http://localhost:8000
+    value: localhost:8000
   - secret: true
     name: JWT_SESSION_TOKEN
