WARNING: do not use localhost anymore: modern linux defaults to ipv6 now, use loopback address instead

--- a/bruno/fiscalismia-development/environments/development.yml
+++ b/bruno/fiscalismia-development/environments/development.yml
@@ -5,6 +5,6 @@ variables:
   - secret: true
     name: API_GW_SECRET_KEY
   - name: FASTAPI_ENDPOINT
-    value: localhost:8000
+    value: 127.0.0.1:8000
   - secret: true
     name: JWT_SESSION_TOKEN
