--- a/.github/workflows/fetch-and-validate-tls-certs.yml
+++ b/.github/workflows/fetch-and-validate-tls-certs.yml
@@ -174,6 +174,10 @@ jobs:
         S3_BUCKET: hangrybear-tf-backend-state-bucket
         S3_PREFIX: fiscalismia-infrastructure/aws
         S3_KEY: state.tfstate
+        DEPLOY_DEMO: ${{ inputs.letsencrypt_demo }}
+        DEPLOY_MONITORING: ${{ inputs.letsencrypt_monitoring }}
+        DEPLOY_FRONTEND: ${{ inputs.letsencrypt_frontend }}
+        DEPLOY_BACKEND: ${{ inputs.letsencrypt_backend }}
       run: |
         aws s3 cp s3://${S3_BUCKET}/${S3_PREFIX}/${S3_KEY} .
 
@@ -189,20 +193,29 @@ jobs:
 
         aws_cmd="aws sts get-caller-identity"
 
-        ssh demo "mkdir -p $REMOTE_DIR"
-        ssh frontend "mkdir -p $REMOTE_DIR"
-        ssh backend "mkdir -p $REMOTE_DIR"
-        ssh monitoring "mkdir -p $REMOTE_DIR"
+        if [ "$DEPLOY_DEMO" = "true" ]; then
+          ssh demo "mkdir -p $REMOTE_DIR"
+          scp ${CREDENTIALS} demo:${REMOTE_DIR}/credentials
+          ssh demo $aws_cmd
+        fi
 
-        scp ${CREDENTIALS} demo:${REMOTE_DIR}/credentials
-        scp ${CREDENTIALS} frontend:${REMOTE_DIR}/credentials
-        scp ${CREDENTIALS} backend:${REMOTE_DIR}/credentials
-        scp ${CREDENTIALS} monitoring:${REMOTE_DIR}/credentials
+        if [ "$DEPLOY_FRONTEND" = "true" ]; then
+          ssh frontend "mkdir -p $REMOTE_DIR"
+          scp ${CREDENTIALS} frontend:${REMOTE_DIR}/credentials
+          ssh frontend $aws_cmd
+        fi
 
-        ssh demo $aws_cmd
-        ssh frontend $aws_cmd
-        ssh backend $aws_cmd
-        ssh monitoring $aws_cmd
+        if [ "$DEPLOY_BACKEND" = "true" ]; then
+          ssh backend "mkdir -p $REMOTE_DIR"
+          scp ${CREDENTIALS} backend:${REMOTE_DIR}/credentials
+          ssh backend $aws_cmd
+        fi
+
+        if [ "$DEPLOY_MONITORING" = "true" ]; then
+          ssh monitoring "mkdir -p $REMOTE_DIR"
+          scp ${CREDENTIALS} monitoring:${REMOTE_DIR}/credentials
+          ssh monitoring $aws_cmd
+        fi
 
         rm -f ${S3_KEY}
         rm -f ${CREDENTIALS}
